@@ -122,8 +122,11 @@ namespace libtorrent
 		char m_v6_buf[1600];
 #endif
 
-		int m_bind_port;
-		char m_outstanding;
+		boost::uint16_t m_bind_port;
+		boost::uint8_t m_v4_outstanding;
+#if TORRENT_USE_IPV6
+		boost::uint8_t m_v6_outstanding;
+#endif
 
 		tcp::socket m_socks5_sock;
 		int m_connection_ticket;
